force-app/main/default/objects/AV_Collective__c/AV_Collective__c.object-meta.xml
<CustomObject>
    <description>Grupos a los que puede pertenecer un cliente.</description>
    <label>Colectivo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Colectivos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colectivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>