force-app/main/default/objects/AV_Collective__c/fields/AV_Description__c.field-meta.xml
<CustomField>
    <fullName>AV_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>