force-app/main/default/objects/AV_Collective__c/fields/AV_Pais__c.field-meta.xml
<CustomField>
    <fullName>AV_Pais__c</fullName>
    <description>País del grupo del cliente</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESPAÑA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>