force-app/main/default/objects/AV_Collective__c/recordTypes/AV_Collective.recordType-meta.xml
<RecordType>
    <fullName>AV_Collective</fullName>
    <active>true</active>
    <label>Colectivo</label>
</RecordType>